@@ -29,7 +29,7 @@
  */
 
 
-/* $Id: internal_functions.c.in,v 1.4 1999/08/29 20:12:12 ssb Exp $ */
+/* $Id: internal_functions.c.in,v 1.5 1999/09/03 17:46:39 sas Exp $ */
 
 
 #include "php.h"
@@ -80,7 +80,7 @@ zend_module_entry *php3_builtin_modules[] = {
 @EXT_MODULE_PTRS@
 };
 
-	
+
 int module_startup_modules(void)
 {
 	zend_module_entry **ptr = php3_builtin_modules, **end = ptr+(sizeof(php3_builtin_modules)/sizeof(zend_module_entry *));
@@ -96,6 +96,37 @@ int module_startup_modules(void)
 	return SUCCESS;
 }
 
+int module_global_startup_modules(void)
+{
+	zend_module_entry **ptr = php3_builtin_modules, **end = ptr+(sizeof(php3_builtin_modules)/sizeof(zend_module_entry *));
+
+	while (ptr < end) {
+		if (*ptr) {
+			if ((*ptr)->global_startup_func && 
+					(*ptr)->global_startup_func()==FAILURE) {
+				return FAILURE;
+			}
+		}
+		ptr++;
+	}
+	return SUCCESS;
+}
+
+int module_global_shutdown_modules(void)
+{
+	zend_module_entry **ptr = php3_builtin_modules, **end = ptr+(sizeof(php3_builtin_modules)/sizeof(zend_module_entry *));
+
+	while (ptr < end) {
+		if (*ptr) {
+			if ((*ptr)->global_shutdown_func && 
+					(*ptr)->global_shutdown_func()==FAILURE) {
+				return FAILURE;
+			}
+		}
+		ptr++;
+	}
+	return SUCCESS;
+}
 
 /*
  * Local variables:
